# 8bit-computer

./: .gitignore  CMakeLists.txt  README.md  assembly_language.md
assembler/: CMakeLists.txt
assembler/src/: assembler.cpp  assembler.hpp  main.cpp  memory_writer.cpp  memory_writer.hpp  parser.cpp  parser.hpp
computer/: CMakeLists.txt
computer/src/: cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp
computer/src/utils/: logger.hpp
samples/: input.asm  xor.asm
src/: cpu.cpp  cpu.hpp  main.cpp  memory.cpp  memory.hpp
src/utils/: logger.hpp
